tests/baselines/reference/invalid-non-id-start-groupspecifier-9-u.errors.txt
invalid-non-id-start-groupspecifier-9-u.ts(14,4): error TS1501: Named capturing groups are only available when targeting 'ES2018' or later.
invalid-non-id-start-groupspecifier-9-u.ts(14,6): error TS1005: '>' expected.
invalid-non-id-start-groupspecifier-9-u.ts(14,9): error TS1198: An extended Unicode escape value must be between 0x0 and 0x10FFFF inclusive.
invalid-non-id-start-groupspecifier-9-u.ts(14,20): error TS1499: This regular expression flag is only available when targeting 'ES2015' or later.


==== invalid-non-id-start-groupspecifier-9-u.ts (4 errors) ====
    // Copyright 2017 the V8 project authors. All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /*---
    description: GroupSpecifier must be identifier-like.
    esid: prod-GroupSpecifier
    negative:
      phase: parse
      type: SyntaxError
    features: [regexp-named-groups]
    ---*/
    
    
    /(?<a\u{110000}>.)/u;
       ~~
!!! error TS1501: Named capturing groups are only available when targeting 'ES2018' or later.
         
!!! error TS1005: '>' expected.
            ~~~~~~
!!! error TS1198: An extended Unicode escape value must be between 0x0 and 0x10FFFF inclusive.
                       ~
!!! error TS1499: This regular expression flag is only available when targeting 'ES2015' or later.
    